CLM-44550: Sort Nexus One lists highest-threat first across pages (#16894)
Co-authored-by: Mitchell Johnson <mitchellsjohnson@users.noreply.github.com>
Co-authored-by: Cursor <cursoragent@cursor.com>